# bazel-template

./: .editorconfig  .gitattributes  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  dependencies.bzl  package.json  renovate.json  techstack.md  techstack.yml
examples/cypress/: BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  package.json
examples/java-maven/: README.md
examples/java-maven/src/test/java/com/example/myproject/: TestApp.java
examples/java-tutorial/: BUILD.bazel
scripts/: clean_nested_workspaces.sh
